wandb dash monitoring added, running for X

--- a/.env.yml
+++ b/.env.yml
@@ -49,6 +49,7 @@ dependencies:
   - tk=8.6.10=h21135ba_1
   - tqdm=4.56.0=pyhd8ed1ab_0
   - typing_extensions=3.7.4.3=py_0
+  - wandb
   - wheel=0.36.2=pyhd3deb0d_0
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1010
