--- a/.env.yml
+++ b/.env.yml
@@ -4,87 +4,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - absl-py=0.11.0=py38h578d9bd_0
-  - argh=0.26.2=pyh9f0ad1d_1002
-  - blas=2.108=mkl
-  - blas-devel=3.9.0=8_mkl
-  - brotlipy=0.7.0=py38h497a2fe_1001
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
-  - cffi=1.14.5=py38ha65f79e_0
-  - chardet=4.0.0=py38h578d9bd_1
-  - click=7.1.2=pyh9f0ad1d_0
-  - configparser=5.0.1=py_0
-  - cryptography=3.4.4=py38h3e25421_0
-  - cudatoolkit=10.2.89=h8f6ccaa_7
-  - docker-pycreds=0.4.0=py_0
-  - gitdb=4.0.5=pyhd8ed1ab_1
-  - gitpython=3.1.13=pyhd8ed1ab_0
-  - gql=0.1.0=py_0
-  - graphql-core=3.1.3=pyhd8ed1ab_0
-  - idna=2.10=pyh9f0ad1d_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=8_mkl
-  - libcblas=3.9.0=8_mkl
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - liblapack=3.9.0=8_mkl
-  - liblapacke=3.9.0=8_mkl
-  - libprotobuf=3.14.0=h780b84a_0
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libuv=1.40.0=h7f98852_0
-  - llvm-openmp=11.0.1=h4bd325d_0
-  - mkl=2020.4=h726a3e6_304
-  - mkl-devel=2020.4=ha770c72_305
-  - mkl-include=2020.4=h726a3e6_304
-  - ncurses=6.2=h58526e2_4
-  - ninja=1.10.2=h4bd325d_0
-  - numpy=1.20.0=py38h18fd61f_0
-  - numpyro=0.5.0=pyhd8ed1ab_0
-  - nvidia-ml=7.352.0=py_0
-  - openssl=1.1.1i=h7f98852_0
-  - opt_einsum=3.3.0=py_0
-  - pandas=1.2.1=py38h51da96c_0
-  - pathtools=0.1.2=py_1
-  - pip=21.0.1=pyhd8ed1ab_0
-  - promise=2.3=py38h578d9bd_3
-  - protobuf=3.14.0=py38h709712a_1
-  - psutil=5.8.0=py38h497a2fe_1
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py38h578d9bd_3
-  - python=3.8.6=hffdb5ce_5_cpython
-  - python-dateutil=2.8.1=py_0
-  - python-flatbuffers=1.12=pyhd8ed1ab_0
-  - python_abi=3.8=1_cp38
-  - pytorch=1.7.1=py3.8_cuda10.2.89_cudnn7.6.5_0
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py38h497a2fe_0
-  - readline=8.0=he28a2e2_2
-  - requests=2.25.1=pyhd3deb0d_0
-  - scipy=1.6.0=py38hb2138dd_0
-  - sentry-sdk=0.20.3=pyh44b312d_0
-  - setuptools=49.6.0=py38h578d9bd_3
-  - shortuuid=1.0.1=py38h578d9bd_4
-  - six=1.15.0=pyh9f0ad1d_0
-  - smmap=3.0.5=pyh44b312d_0
-  - sqlite=3.34.0=h74cdb3f_0
-  - subprocess32=3.5.4=py_1
-  - tk=8.6.10=h21135ba_1
-  - tqdm=4.56.0=pyhd8ed1ab_0
-  - typing_extensions=3.7.4.3=py_0
-  - urllib3=1.26.3=pyhd8ed1ab_0
-  - wandb=0.10.18=pyhd8ed1ab_0
-  - watchdog=0.10.4=py38h578d9bd_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - zlib=1.2.11=h516909a_1010
+  - cudatoolkit=11
+  - numpyro=0.6.0
+  - pandas=1.2.1
+  - pip
+  - python=3.8
+  - scipy=1.6.0
+  - wandb=0.10.18
+  - jax=0.2.10
   - pip:
-    - jax==0.2.8
-    - jaxlib==0.1.59+cuda110
+    - jaxlib==0.1.62+cuda110
 prefix: /home/harrigan/miniconda3/envs/damut
