--- a/.env.yml
+++ b/.env.yml
@@ -1,17 +1,80 @@
 name: damut
 channels:
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - cudatoolkit=11
-  - numpyro=0.6.0
-  - pandas=1.2.1
-  - pip
-  - python=3.8
-  - scipy=1.6.0
-  - wandb=0.10.18
-  - jax=0.2.10
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - absl-py=0.12.0=pyhd8ed1ab_0
+  - argh=0.26.2=pyh9f0ad1d_1002
+  - brotlipy=0.7.0=py38h497a2fe_1001
+  - ca-certificates=2020.12.5=ha878542_0
+  - certifi=2020.12.5=py38h578d9bd_1
+  - cffi=1.14.5=py38ha65f79e_0
+  - chardet=4.0.0=py38h578d9bd_1
+  - click=7.1.2=pyh9f0ad1d_0
+  - configparser=5.0.2=pyhd8ed1ab_0
+  - cryptography=3.4.7=py38ha5dfef3_0
+  - cudatoolkit=11.2.2=he111cf0_8
+  - docker-pycreds=0.4.0=py_0
+  - gitdb=4.0.7=pyhd8ed1ab_0
+  - gitpython=3.1.14=pyhd8ed1ab_0
+  - gql=0.1.0=py_0
+  - graphql-core=3.1.4=pyhd8ed1ab_0
+  - idna=2.10=pyh9f0ad1d_0
+  - jax=0.2.12=pyhd8ed1ab_0
+  - ld_impl_linux-64=2.35.1=hea4e1c9_2
+  - libblas=3.9.0=8_openblas
+  - libcblas=3.9.0=8_openblas
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=9.3.0=h2828fa1_18
+  - libgfortran-ng=9.3.0=hff62375_18
+  - libgfortran5=9.3.0=hff62375_18
+  - libgomp=9.3.0=h2828fa1_18
+  - liblapack=3.9.0=8_openblas
+  - libopenblas=0.3.12=pthreads_h4812303_1
+  - libprotobuf=3.15.8=h780b84a_0
+  - libstdcxx-ng=9.3.0=h6de172a_18
+  - ncurses=6.2=h58526e2_4
+  - numpy=1.20.2=py38h9894fe3_0
+  - numpyro=0.6.0=pyhd8ed1ab_0
+  - nvidia-ml=7.352.0=py_0
+  - openssl=1.1.1k=h7f98852_0
+  - opt_einsum=3.3.0=pyhd8ed1ab_1
+  - pandas=1.2.1=py38h51da96c_0
+  - pathtools=0.1.2=py_1
+  - pip=21.0.1=pyhd8ed1ab_0
+  - promise=2.3=py38h578d9bd_3
+  - protobuf=3.15.8=py38h709712a_0
+  - psutil=5.8.0=py38h497a2fe_1
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=py38h578d9bd_3
+  - python=3.8.8=hffdb5ce_0_cpython
+  - python-dateutil=2.8.1=py_0
+  - python-flatbuffers=1.12=pyhd8ed1ab_1
+  - python_abi=3.8=1_cp38
+  - pytz=2021.1=pyhd8ed1ab_0
+  - pyyaml=5.4.1=py38h497a2fe_0
+  - readline=8.0=he28a2e2_2
+  - requests=2.25.1=pyhd3deb0d_0
+  - scipy=1.6.0=py38hb2138dd_0
+  - sentry-sdk=0.20.3=pyh44b312d_0
+  - setuptools=49.6.0=py38h578d9bd_3
+  - shortuuid=1.0.1=py38h578d9bd_4
+  - six=1.15.0=pyh9f0ad1d_0
+  - smmap=3.0.5=pyh44b312d_0
+  - sqlite=3.35.4=h74cdb3f_0
+  - subprocess32=3.5.4=py_1
+  - tk=8.6.10=h21135ba_1
+  - tqdm=4.60.0=pyhd8ed1ab_0
+  - urllib3=1.26.4=pyhd8ed1ab_0
+  - wandb=0.10.18=pyhd8ed1ab_0
+  - watchdog=0.10.4=py38h578d9bd_0
+  - wheel=0.36.2=pyhd3deb0d_0
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
+  - zlib=1.2.11=h516909a_1010
   - pip:
-    - jaxlib==0.1.62+cuda110
+    - jaxlib==0.1.65+cuda110
 prefix: /home/harrigan/miniconda3/envs/damut
