--- a/.env.yml
+++ b/.env.yml
@@ -1,80 +1,200 @@
-name: damut
+name: pymc3
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
+  - _openmp_mutex=4.5=1_llvm
   - absl-py=0.12.0=pyhd8ed1ab_0
-  - argh=0.26.2=pyh9f0ad1d_1002
-  - brotlipy=0.7.0=py38h497a2fe_1001
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
-  - cffi=1.14.5=py38ha65f79e_0
-  - chardet=4.0.0=py38h578d9bd_1
-  - click=7.1.2=pyh9f0ad1d_0
-  - configparser=5.0.2=pyhd8ed1ab_0
-  - cryptography=3.4.7=py38ha5dfef3_0
-  - cudatoolkit=11.2.2=he111cf0_8
-  - docker-pycreds=0.4.0=py_0
-  - gitdb=4.0.7=pyhd8ed1ab_0
-  - gitpython=3.1.14=pyhd8ed1ab_0
-  - gql=0.1.0=py_0
-  - graphql-core=3.1.4=pyhd8ed1ab_0
-  - idna=2.10=pyh9f0ad1d_0
+  - argon2-cffi=20.1.0=py38h7b6447c_1
+  - arviz=0.11.2=pyhd8ed1ab_0
+  - async_generator=1.10=py_0
+  - attrs=20.2.0=py_0
+  - backcall=0.2.0=py_0
+  - binutils_impl_linux-64=2.35.1=h193b22a_2
+  - binutils_linux-64=2.35=h67ddf6f_30
+  - bleach=3.2.1=py_0
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.17.1=h7f98852_1
+  - ca-certificates=2020.10.14=0
+  - cachetools=4.2.1=pyhd8ed1ab_0
+  - certifi=2020.6.20=py38_0
+  - cffi=1.14.3=py38he30daa8_0
+  - cftime=1.4.1=py38h5c078b8_0
+  - cudatoolkit=10.2.89=hfd86e86_1
+  - cudnn=7.6.5=cuda10.2_0
+  - curl=7.76.0=h979ede3_0
+  - cycler=0.10.0=py_2
+  - dbus=1.13.6=h48d8840_2
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - dill=0.3.3=pyhd8ed1ab_0
+  - entrypoints=0.3=py38_0
+  - expat=2.3.0=h9c3ff4c_0
+  - fastprogress=1.0.0=py_0
+  - filelock=3.0.12=pyh9f0ad1d_0
+  - fontconfig=2.13.1=hba837de_1005
+  - freetype=2.10.4=h0708190_1
+  - gcc_impl_linux-64=9.3.0=h70c0ae5_19
+  - gcc_linux-64=9.3.0=hf25ea35_30
+  - gettext=0.19.8.1=h0b5b191_1005
+  - glib=2.68.1=h9c3ff4c_0
+  - glib-tools=2.68.1=h9c3ff4c_0
+  - gst-plugins-base=1.18.4=h29181c9_0
+  - gstreamer=1.18.4=h76c114f_0
+  - gxx_impl_linux-64=9.3.0=hd87eabc_19
+  - gxx_linux-64=9.3.0=h3fbe746_30
+  - hdf4=4.2.13=h10796ff_1004
+  - hdf5=1.10.6=nompi_h6a2412b_1114
+  - icu=68.1=h58526e2_0
+  - importlib-metadata=2.0.0=py_1
+  - importlib_metadata=2.0.0=1
+  - ipykernel=5.3.4=py38h5ca1d4c_0
+  - ipython=7.18.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py38_0
+  - ipywidgets=7.5.1=py_1
   - jax=0.2.12=pyhd8ed1ab_0
+  - jaxlib=0.1.65=py38h578d9bd_0
+  - jedi=0.18.0=py38h06a4308_1
+  - jinja2=2.11.2=py_0
+  - joblib=0.17.0=py_0
+  - jpeg=9d=h36c2ea0_0
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py38_7
+  - jupyter_client=6.1.7=py_0
+  - jupyter_console=6.2.0=py_0
+  - jupyter_core=4.6.3=py38_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - kernel-headers_linux-64=2.6.32=h77966d4_13
+  - kiwisolver=1.3.1=py38h1fd1430_1
+  - krb5=1.17.2=h926e7f8_0
+  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.35.1=hea4e1c9_2
   - libblas=3.9.0=8_openblas
   - libcblas=3.9.0=8_openblas
+  - libclang=11.1.0=default_ha53f305_0
+  - libcurl=7.76.0=hc4aaa36_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.10=hcdb4288_3
   - libffi=3.3=h58526e2_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - libgomp=9.3.0=h2828fa1_18
+  - libgcc-devel_linux-64=9.3.0=h7864c58_19
+  - libgcc-ng=9.3.0=h2828fa1_19
+  - libgfortran-ng=9.3.0=hff62375_19
+  - libgfortran5=9.3.0=hff62375_19
+  - libglib=2.68.1=h3e27bee_0
+  - libgomp=9.3.0=h2828fa1_19
+  - libgpuarray=0.7.6=h7f98852_1003
+  - libiconv=1.16=h516909a_0
   - liblapack=3.9.0=8_openblas
+  - libllvm11=11.1.0=hf817b99_2
+  - libnetcdf=4.8.0=nompi_hf7493bd_100
+  - libnghttp2=1.43.0=h812cca2_0
   - libopenblas=0.3.12=pthreads_h4812303_1
-  - libprotobuf=3.15.8=h780b84a_0
-  - libstdcxx-ng=9.3.0=h6de172a_18
+  - libpng=1.6.37=h21135ba_2
+  - libpq=13.1=hfd2b0eb_2
+  - libsodium=1.0.18=h7b6447c_0
+  - libssh2=1.9.0=ha56f1ee_6
+  - libstdcxx-devel_linux-64=9.3.0=hb016644_19
+  - libstdcxx-ng=9.3.0=h6de172a_19
+  - libtiff=4.2.0=hdc55705_0
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.0=h7f98852_2
+  - libxcb=1.13=h7f98852_1003
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.10=h72842e0_3
+  - llvm-openmp=11.1.0=h4bd325d_1
+  - lz4-c=1.9.3=h9c3ff4c_0
+  - mako=1.1.4=pyh44b312d_0
+  - markupsafe=1.1.1=py38h497a2fe_3
+  - matplotlib=3.4.1=py38h578d9bd_0
+  - matplotlib-base=3.4.1=py38hcc49a3a_0
+  - mistune=0.8.4=py38h7b6447c_1000
+  - mkl=2020.4=h726a3e6_304
+  - mkl-service=2.3.0=py38h1e0a361_2
+  - mysql-common=8.0.23=ha770c72_1
+  - mysql-libs=8.0.23=h935591d_1
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py38_0
+  - nbformat=5.0.8=py_0
   - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.4.1=py_0
+  - netcdf4=1.5.6=nompi_py38h5e9db54_101
+  - notebook=6.1.4=py38_0
+  - nspr=4.30=h9c3ff4c_0
+  - nss=3.63=hb5efdd6_0
   - numpy=1.20.2=py38h9894fe3_0
-  - numpyro=0.6.0=pyhd8ed1ab_0
-  - nvidia-ml=7.352.0=py_0
-  - openssl=1.1.1k=h7f98852_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.4.0=hf7af979_0
+  - openssl=1.1.1k=h27cfd23_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
-  - pandas=1.2.1=py38h51da96c_0
-  - pathtools=0.1.2=py_1
+  - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.3=py38h51da96c_0
+  - pandoc=2.11=hb0f4dca_0
+  - pandocfilters=1.4.2=py38_1
+  - parso=0.8.0=py_0
+  - patsy=0.5.1=py_0
+  - pcre=8.44=he1b5a44_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
+  - pillow=8.1.2=py38ha0e1e83_1
   - pip=21.0.1=pyhd8ed1ab_0
-  - promise=2.3=py38h578d9bd_3
-  - protobuf=3.15.8=py38h709712a_0
-  - psutil=5.8.0=py38h497a2fe_1
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py38h578d9bd_3
+  - prometheus_client=0.8.0=py_0
+  - prompt-toolkit=3.0.8=py_0
+  - prompt_toolkit=3.0.8=0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.6.0=py38_0
+  - pycparser=2.20=py_2
+  - pygments=2.7.1=py_0
+  - pygpu=0.7.6=py38heb32a55_0
+  - pymc3=3.11.2=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.12.3=py38h578d9bd_7
+  - pyqt-impl=5.12.3=py38h7400c14_7
+  - pyqt5-sip=4.19.18=py38h709712a_7
+  - pyqtchart=5.12=py38h7400c14_7
+  - pyqtwebengine=5.12.1=py38h7400c14_7
+  - pyrsistent=0.17.3=py38h7b6447c_0
   - python=3.8.8=hffdb5ce_0_cpython
   - python-dateutil=2.8.1=py_0
   - python-flatbuffers=1.12=pyhd8ed1ab_1
   - python_abi=3.8=1_cp38
   - pytz=2021.1=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py38h497a2fe_0
+  - pyzmq=19.0.2=py38he6710b0_1
+  - qt=5.12.9=hda022c4_4
+  - qtconsole=4.7.7=py_0
+  - qtpy=1.9.0=py_0
   - readline=8.0=he28a2e2_2
-  - requests=2.25.1=pyhd3deb0d_0
-  - scipy=1.6.0=py38hb2138dd_0
-  - sentry-sdk=0.20.3=pyh44b312d_0
+  - scikit-learn=0.23.2=py38h0573a6f_0
+  - scipy=1.6.2=py38h7b17777_0
+  - seaborn=0.11.0=py_0
+  - semver=2.13.0=pyh9f0ad1d_0
+  - send2trash=1.5.0=py38_0
   - setuptools=49.6.0=py38h578d9bd_3
-  - shortuuid=1.0.1=py38h578d9bd_4
   - six=1.15.0=pyh9f0ad1d_0
-  - smmap=3.0.5=pyh44b312d_0
   - sqlite=3.35.4=h74cdb3f_0
-  - subprocess32=3.5.4=py_1
+  - sysroot_linux-64=2.12=h77966d4_13
+  - terminado=0.9.1=py38_0
+  - testpath=0.4.4=py_0
+  - theano=1.0.5=py38h709712a_1
+  - theano-pymc=1.1.2=py38h709712a_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=h21135ba_1
-  - tqdm=4.60.0=pyhd8ed1ab_0
-  - urllib3=1.26.4=pyhd8ed1ab_0
-  - wandb=0.10.18=pyhd8ed1ab_0
-  - watchdog=0.10.4=py38h578d9bd_0
+  - tornado=6.1=py38h497a2fe_1
+  - traitlets=5.0.5=py_0
+  - typing-extensions=3.7.4.3=0
+  - typing_extensions=3.7.4.3=py_0
+  - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py38_1
   - wheel=0.36.2=pyhd3deb0d_0
+  - widgetsnbextension=3.5.1=py38_0
+  - xarray=0.17.0=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
+  - zeromq=4.3.3=he6710b0_3
+  - zipp=3.3.1=py_0
   - zlib=1.2.11=h516909a_1010
-  - pip:
-    - jaxlib==0.1.65+cuda110
-prefix: /home/harrigan/miniconda3/envs/damut
+  - zstd=1.4.9=ha95c52a_0
+prefix: /home/harrigan/miniconda3/envs/pymc3
