--- a/configs/tiny_test.yaml
+++ b/configs/tiny_test.yaml
@@ -1,4 +1,4 @@
-# default.yaml
+# tiny_test.yaml
 sim_data.py:
   sim_cosmic:
     sig_defs: '~/data/cosmic/sigProfiler_SBS_signatures_2019_05_22.csv'
@@ -6,23 +6,26 @@ sim_data.py:
     S: 20
     N: 5000
     I: 2
-    tau_hyperprior: 0.01
+    tau_hyperprior: 0.05
 
-
+    
 advi_cosmic.py:
     fit_collapsed_model:
         seed: 42
         n_steps: 50000
         lr: 1
-        J: 1
-        K: 2
-        alpha_bias: 0.05
-        psi_bias: 1
-        gamma_bias: 0.1
-        beta_bias: 0.1
     
     cbs:
         # sparse logging will speed up training 
-        log_every: 10000
-
-
+        log_every: 1000
+        
+        
+utils.py:
+    collapsed_model_factory:
+        J: 3
+        K: 3
+        alpha_bias: 0.05
+        psi_bias: 1
+        gamma_bias: 0.1
+        beta_bias: 1
+    
