--- a/configs/defaults.yaml
+++ b/configs/defaults.yaml
@@ -20,23 +20,20 @@ sim_data.py:
     beta_bias: 0.1
 
     
-advi_cosmic.py:
+cosmic_mix.py:
     fit_collapsed_model:
+        J: 6
+        K: 6
+        alpha_bias: 0.05
+        psi_bias: 1
+        gamma_bias: 0.1
+        beta_bias: 0.1
         seed: 42
         n_steps: 50000
         lr: 1
     
     cbs:
         # sparse logging will speed up training 
-        log_every: 1000
+        log_every: 10000
         
-        
-utils.py:
-    collapsed_model_factory:
-        J: 3
-        K: 3
-        alpha_bias: 0.05
-        psi_bias: 1
-        gamma_bias: 0.1
-        beta_bias: 0.1
     
