--- a/configs/pcawg_defaults.yaml
+++ b/configs/pcawg_defaults.yaml
@@ -3,19 +3,25 @@ fit_pcawg.py:
         counts_fn: 'mutation_types_raw_counts.csv'
         types_fn: 'pcawg_cancer_types.csv'
         type_subset: ['Skin-Melanoma']
+     
+    load_ref_taus:
+        cosmic_fn: 'COSMIC_v3.2_SBS_GRCh37.txt'
+        alex_local_fn: 'pcawg_localsigs.csv'
+        degas_local_fn: 'degasperi_localsigs.csv'
     
     fit_collapsed_model:
         J: 5
-        K: 5
+        K: 4
         alpha_bias: 0.05
         psi_bias: 1
-        gamma_bias: 1
+        gamma_bias: 2
         beta_bias: 1
         seed: 42
-        n_steps: 50000
+        n_steps: 500
+        init_strategy: 'kmeans'
     
     cbs:
         # sparse logging will speed up training 
-        log_every: 10000
-        
+        log_every: 100
+    
     
