up to dirichlet reparam, edits for notest and addition of refsigs, sample metadata

--- a/.env.yml
+++ b/.env.yml
@@ -1,4 +1,4 @@
-name: pymc3
+name: damut
 channels:
   - plotly
   - anaconda
@@ -252,4 +252,4 @@ dependencies:
   - zipp=3.4.1=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
-prefix: /home/harrigan/miniconda3/envs/pymc3
+prefix: /home/harrigan/miniconda3/envs/damut
