up to model init

--- a/config/config-defaults.yaml
+++ b/config/config-defaults.yaml
@@ -1,26 +1,20 @@
 dataset:
   # select data source - one of load_counts, sim_cosmic, sim_parametric
   # any parameters for non-selected data sources will be ignored
-  dataset_sel: sim_cosmic
+  dataset_sel: sim_from_sigs
 
   load_counts:
     counts_fp: data/mutation_types_raw_counts.csv
     annotation_fp: data/pcawg_cancer_types.csv
-    annotation_subset: ['Breast']
+    annotation_subset: ['ColoRect']
 
-  load_ref_taus:
-    cosmic_fp: data/COSMIC_v3.2_SBS_GRCh37.txt
-    alex_local_fp: data/pcawg_localsigs.csv
-    degas_local_fp: data/degasperi_localsigs.csv
-
-  sim_cosmic:
-    sig_defs: data/COSMIC_v3.2_SBS_GRCh37.txt
+  sim_from_sigs:
+    sig_defs_fp: data/COSMIC_v3.2_SBS_GRCh37.txt
     sim_seed: 42
     sim_S: 100
     sim_N: 5000
     sim_I: 4
     sim_tau_hyperprior: 0.1
-    batch_size: None
 
   sim_parametric:
     sim_seed: 42
@@ -34,6 +28,8 @@ dataset:
     sim_beta_bias: 1
 
 model:
+  model_sel: damut
+  model_seed: 69
   J: 5
   K: 4
   alpha_bias: 0.05
@@ -45,7 +41,6 @@ model:
   log_every: 10000
 
 pymc3:
-  pymc3_seed: 41
   niters: 10000
   method: fullrank_advi
   lr: 1
