--- a/.env.yml
+++ b/.env.yml
@@ -1,4 +1,4 @@
-name: damut
+name: pymc3
 channels:
   - plotly
   - anaconda
@@ -6,88 +6,93 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - absl-py=0.12.0=py38h06a4308_0
-  - argh=0.26.2=py38_0
+  - _openmp_mutex=4.5=1_gnu
+  - absl-py=0.10.0=py38_0
+  - argh=0.26.2=pyh9f0ad1d_1002
   - argon2-cffi=20.1.0=py38h27cfd23_1
-  - arviz=0.11.2=pyhd3eb1b0_0
+  - arviz=0.11.2=pyhd8ed1ab_1
+  - astor=0.8.1=pyh9f0ad1d_0
   - async_generator=1.10=pyhd3eb1b0_0
-  - atk-1.0=2.36.0=h28cd5cc_0
   - attrs=21.2.0=pyhd3eb1b0_0
+  - autograd=1.3=py_0
+  - autograd-gamma=0.5.0=pyh9f0ad1d_0
   - backcall=0.2.0=pyhd3eb1b0_0
-  - binutils_impl_linux-64=2.35.1=h193b22a_2
-  - binutils_linux-64=2.35=h67ddf6f_30
-  - bleach=3.3.0=pyhd3eb1b0_0
-  - brotlipy=0.7.0=py38h27cfd23_1003
-  - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.4.13=h06a4308_1
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - cairo=1.16.0=hf32fb01_1
-  - certifi=2020.12.5=py38h06a4308_0
-  - cffi=1.14.5=py38h261ae71_0
-  - cftime=1.5.0=py38h6323ea4_0
-  - chardet=4.0.0=py38h06a4308_1003
-  - click=8.0.1=pyhd3eb1b0_0
-  - configparser=5.0.2=pyhd3eb1b0_0
-  - cryptography=3.4.7=py38hd23ed53_0
-  - cudatoolkit=10.2.89=hfd86e86_1
-  - cudnn=7.6.5=cuda10.2_0
-  - curl=7.76.0=h979ede3_0
+  - binutils=2.36.1=hdd6e379_2
+  - binutils_impl_linux-64=2.36.1=h193b22a_2
+  - binutils_linux-64=2.36=hf3e587d_0
+  - blas=1.0=mkl
+  - bleach=4.0.0=pyhd3eb1b0_0
+  - brotlipy=0.7.0=py38h497a2fe_1001
+  - bzip2=1.0.8=h7b6447c_0
+  - c-compiler=1.2.0=h7f98852_0
+  - ca-certificates=2021.5.30=ha878542_0
+  - cachetools=4.2.2=pyhd8ed1ab_0
+  - cairo=1.16.0=h18b612c_1001
+  - certifi=2021.5.30=py38h578d9bd_0
+  - cffi=1.14.6=py38h400218f_0
+  - cftime=1.2.1=py38heb32a55_0
+  - chardet=4.0.0=py38h578d9bd_1
+  - charset-normalizer=2.0.0=pyhd8ed1ab_0
+  - click=8.0.1=py38h578d9bd_0
+  - configparser=5.0.2=pyhd8ed1ab_0
+  - cryptography=3.4.7=py38ha5dfef3_0
+  - curl=7.71.1=hbc83047_1
+  - cxx-compiler=1.2.0=h4bd325d_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.18=hb2f20db_0
   - decorator=5.0.9=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - dill=0.3.3=pyhd3eb1b0_0
+  - dill=0.3.2=py_0
   - docker-pycreds=0.4.0=py_0
   - entrypoints=0.3=py38_0
   - expat=2.4.1=h2531618_2
   - fastprogress=1.0.0=py_0
-  - filelock=3.0.12=pyhd3eb1b0_1
-  - font-ttf-dejavu-sans-mono=2.37=h6964260_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=h7457263_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - filelock=3.0.12=py_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
   - fontconfig=2.13.1=h6c09931_0
-  - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - formulaic=0.2.4=pyhd8ed1ab_0
   - freetype=2.10.4=h5ab3b9f_0
-  - fribidi=1.0.10=h7b6447c_0
-  - gcc_impl_linux-64=9.3.0=h70c0ae5_19
-  - gcc_linux-64=9.3.0=hf25ea35_30
-  - gdk-pixbuf=2.42.6=h04a7f16_0
-  - gettext=0.21.0=hf68c758_0
-  - giflib=5.2.1=h7b6447c_0
-  - gitdb=4.0.7=pyhd3eb1b0_0
-  - gitpython=3.1.17=pyhd3eb1b0_1
-  - glib=2.68.1=h36276a3_0
-  - gobject-introspection=1.68.0=py38h2109141_1
+  - fribidi=1.0.10=h36c2ea0_0
+  - future=0.18.2=py38h578d9bd_3
+  - gcc_impl_linux-64=9.4.0=h03d3576_8
+  - gcc_linux-64=9.4.0=h391b98a_0
+  - gettext=0.19.8.1=h0b5b191_1005
+  - gitdb=4.0.7=pyhd8ed1ab_0
+  - gitpython=3.1.18=pyhd8ed1ab_0
+  - glib=2.69.0=h5202010_0
   - gql=0.1.0=py_0
-  - graphite2=1.3.14=h23475e2_0
-  - graphql-core=3.1.4=pyhd8ed1ab_0
-  - graphviz=2.47.1=hebd9034_0
-  - gst-plugins-base=1.18.4=h29181c9_0
-  - gstreamer=1.18.4=h76c114f_0
-  - gtk2=2.24.33=hab0c2f8_0
-  - gts=0.7.6=h64030ff_2
-  - gxx_impl_linux-64=9.3.0=hd87eabc_19
-  - gxx_linux-64=9.3.0=h3fbe746_30
-  - harfbuzz=2.8.0=h83ec7ef_1
-  - hdf4=4.2.13=h3ca952b_2
-  - hdf5=1.10.6=nompi_h6a2412b_1114
-  - icu=68.1=h2531618_0
-  - idna=2.10=pyhd3eb1b0_0
+  - graphite2=1.3.13=h58526e2_1001
+  - graphql-core=3.1.5=pyhd8ed1ab_0
+  - graphviz=2.42.3=h0511662_0
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - gxx_impl_linux-64=9.4.0=h03d3576_8
+  - gxx_linux-64=9.4.0=h0316aca_0
+  - harfbuzz=2.4.0=h37c48d4_1
+  - hdbscan=0.8.27=py38h5c078b8_0
+  - hdf4=4.2.13=0
+  - hdf5=1.10.4=hb1b8bf9_0
+  - icu=58.2=he6710b0_3
+  - idna=3.1=pyhd3deb0d_0
   - importlib-metadata=3.10.0=py38h06a4308_0
   - importlib_metadata=3.10.0=hd3eb1b0_0
-  - intel-openmp=2021.2.0=h06a4308_610
+  - iniconfig=1.1.1=py_0
+  - intel-openmp=2020.2=254
+  - interface_meta=1.2.3=pyhd8ed1ab_0
   - ipykernel=5.3.4=py38h5ca1d4c_0
-  - ipython=7.22.0=py38hb070fc8_0
+  - ipython=7.26.0=py38hb070fc8_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - ipywidgets=7.6.3=pyhd3eb1b0_1
-  - jax=0.2.12=pyhd8ed1ab_0
-  - jaxlib=0.1.65=py38h578d9bd_0
-  - jedi=0.17.0=py38_0
-  - jinja2=3.0.0=pyhd3eb1b0_0
-  - joblib=1.0.1=pyhd3eb1b0_0
+  - jax=0.2.18=pyhd8ed1ab_0
+  - jaxlib=0.1.69=py38h578d9bd_1
+  - jbig=2.1=h7f98852_2003
+  - jedi=0.18.0=py38h06a4308_1
+  - jinja2=2.11.3=pyhd3eb1b0_0
+  - joblib=1.0.1=pyhd8ed1ab_0
   - jpeg=9d=h36c2ea0_0
   - jsonschema=3.2.0=py_2
   - jupyter=1.0.0=py38_7
@@ -96,160 +101,166 @@ dependencies:
   - jupyter_core=4.7.1=py38h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-  - kernel-headers_linux-64=2.6.32=h77966d4_13
-  - kiwisolver=1.3.1=py38h2531618_0
-  - krb5=1.17.1=h173b8e3_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=8_openblas
-  - libcblas=3.9.0=8_openblas
-  - libclang=11.1.0=default_ha53f305_0
-  - libcurl=7.76.0=hc4aaa36_0
-  - libedit=3.1.20210216=h27cfd23_1
-  - libev=4.33=h7b6447c_0
-  - libevent=2.1.10=hcdb4288_3
+  - kaleido-core=0.2.1=h3644ca4_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_14
+  - kiwisolver=1.2.0=py38hfd86e86_0
+  - krb5=1.18.2=h173b8e3_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=2.2.1=h9c3ff4c_0
+  - libblas=3.8.0=14_mkl
+  - libcblas=3.8.0=14_mkl
+  - libcurl=7.71.1=h20c2e04_1
+  - libdeflate=1.7=h7f98852_5
+  - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
-  - libgcc-devel_linux-64=9.3.0=h7864c58_19
-  - libgcc-ng=9.3.0=h2828fa1_19
-  - libgd=2.3.2=h78a0170_0
-  - libgfortran-ng=9.3.0=hff62375_19
-  - libgfortran5=9.3.0=hff62375_19
-  - libglib=2.68.1=h3e27bee_0
-  - libgomp=9.3.0=h2828fa1_19
+  - libgcc-devel_linux-64=9.4.0=hd854feb_8
+  - libgcc-ng=11.1.0=hc902ee8_8
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libgomp=11.1.0=hc902ee8_8
   - libgpuarray=0.7.6=h14c3975_0
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_openblas
   - libllvm11=11.1.0=hf817b99_2
-  - libnetcdf=4.6.1=h2053bdc_3
-  - libnghttp2=1.43.0=h812cca2_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
+  - libnetcdf=4.7.3=hb80b6cc_0
   - libpng=1.6.37=hbc83047_0
-  - libpq=13.1=hfd2b0eb_2
-  - libprotobuf=3.14.0=h8c45485_0
-  - librsvg=2.50.3=hfa39831_1
+  - libprotobuf=3.17.2=h780b84a_1
+  - libsanitizer=9.4.0=h79bfe98_8
   - libsodium=1.0.18=h7b6447c_0
   - libssh2=1.9.0=h1ba5d50_1
-  - libstdcxx-devel_linux-64=9.3.0=hb016644_19
-  - libstdcxx-ng=9.3.0=h6de172a_19
-  - libtiff=4.2.0=hdc55705_0
-  - libtool=2.4.6=h7b6447c_1005
+  - libstdcxx-devel_linux-64=9.4.0=hd854feb_8
+  - libstdcxx-ng=11.1.0=h56837e0_8
+  - libtiff=4.3.0=hf544144_1
+  - libtool=2.4.6=h9c3ff4c_1008
   - libuuid=1.0.3=h1bed415_2
-  - libwebp=1.2.0=h89dd481_0
-  - libwebp-base=1.2.0=h27cfd23_0
+  - libwebp-base=1.2.1=h7f98852_0
   - libxcb=1.14=h7b6447c_0
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.10=h72842e0_3
-  - llvm-openmp=11.1.0=h4bd325d_1
-  - lz4-c=1.9.3=h2531618_0
-  - mako=1.1.4=pyhd3eb1b0_0
-  - markupsafe=2.0.1=py38h27cfd23_0
-  - matplotlib=3.4.1=py38h578d9bd_0
-  - matplotlib-base=3.4.1=py38hcc49a3a_0
+  - libxml2=2.9.12=h03d6c58_0
+  - lifelines=0.26.0=pyhd8ed1ab_0
+  - llvmlite=0.37.0=py38h4630a5e_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - mako=1.1.3=py_0
+  - markupsafe=1.1.1=py38h7b6447c_0
+  - mathjax=2.7.7=0
+  - matplotlib=3.2.2=0
+  - matplotlib-base=3.2.2=py38hef1b27d_0
+  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
   - mistune=0.8.4=py38h7b6447c_1000
-  - mkl=2021.2.0=h06a4308_296
-  - mkl-service=2.3.0=py38h27cfd23_1
-  - mysql-common=8.0.23=ha770c72_1
-  - mysql-libs=8.0.23=h935591d_1
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.0=py38h962f231_0
+  - more-itertools=8.5.0=py_0
   - nbclient=0.5.3=pyhd3eb1b0_0
-  - nbconvert=6.0.7=py38_0
+  - nbconvert=6.1.0=py38h06a4308_0
   - nbformat=5.1.3=pyhd3eb1b0_0
   - ncurses=6.2=he6710b0_1
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - netcdf4=1.5.6=py38hd5c503a_0
-  - ninja=1.10.2=hff7bd54_1
-  - notebook=6.4.0=py38h06a4308_0
+  - netcdf4=1.5.3=py38hbf33ddf_0
+  - notebook=6.3.0=py38h06a4308_0
   - nspr=4.30=h9c3ff4c_0
-  - nss=3.63=hb5efdd6_0
-  - numpy=1.20.2=py38h9894fe3_0
+  - nss=3.69=hb5efdd6_0
+  - numba=0.54.0=py38h4bf6c61_0
+  - numpy=1.19.1=py38hbc911f0_0
+  - numpy-base=1.19.1=py38hfa32c7d_0
   - nvidia-ml=7.352.0=py_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1k=h27cfd23_0
-  - opt_einsum=3.3.0=pyhd3eb1b0_1
-  - packaging=20.9=pyhd3eb1b0_0
-  - pandas=1.2.3=py38h51da96c_0
-  - pandoc=2.12=h06a4308_0
+  - openssl=1.1.1l=h7f98852_0
+  - opt_einsum=3.1.0=py_0
+  - packaging=20.4=py_0
+  - pandas=1.1.3=py38he6710b0_0
   - pandocfilters=1.4.3=py38h06a4308_1
-  - pango=1.42.4=h69149e4_5
+  - pango=1.42.4=h7062337_4
   - parso=0.8.2=pyhd3eb1b0_0
   - pathtools=0.1.2=py_1
   - patsy=0.5.1=py38_0
-  - pcre=8.44=he6710b0_0
+  - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.2.0=py38he98fc37_0
-  - pip=21.1.1=py38h06a4308_0
-  - pixman=0.40.0=h7b6447c_0
-  - plotly=4.14.3=py_0
-  - prometheus_client=0.10.1=pyhd3eb1b0_0
-  - promise=2.3=py38h06a4308_0
+  - pip=20.2.4=py38_0
+  - pixman=0.38.0=h516909a_1003
+  - plotly=5.1.0=py_0
+  - pluggy=0.13.1=py38_0
+  - prometheus_client=0.11.0=pyhd3eb1b0_0
+  - promise=2.3=py38h578d9bd_3
   - prompt-toolkit=3.0.17=pyh06a4308_0
   - prompt_toolkit=3.0.17=hd3eb1b0_0
-  - protobuf=3.14.0=py38h2531618_1
-  - psutil=5.8.0=py38h27cfd23_1
+  - protobuf=3.17.2=py38h709712a_0
+  - psutil=5.8.0=py38h497a2fe_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py=1.9.0=py_0
   - pycparser=2.20=py_2
-  - pydotplus=2.0.2=pyhd1c1de3_3
   - pygments=2.9.0=pyhd3eb1b0_0
   - pygpu=0.7.6=py38heb32a55_0
-  - pymc3=3.11.2=pyhd8ed1ab_0
-  - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.12.3=py38h578d9bd_7
-  - pyqt-impl=5.12.3=py38h7400c14_7
-  - pyqt5-sip=4.19.18=py38h709712a_7
-  - pyqtchart=5.12=py38h7400c14_7
-  - pyqtwebengine=5.12.1=py38h7400c14_7
+  - pymc3=3.11.2=py38h83c9d95_3
+  - pynndescent=0.5.4=pyh6c4a22f_0
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pyparsing=2.4.7=py_0
+  - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.17.3=py38h7b6447c_0
-  - pysocks=1.7.1=py38h06a4308_0
-  - python=3.8.8=hffdb5ce_0_cpython
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - python-flatbuffers=1.12=pyhd3eb1b0_0
-  - python-graphviz=0.16=pyh243d235_2
-  - python_abi=3.8=1_cp38
-  - pytz=2021.1=pyhd3eb1b0_0
-  - pyyaml=5.3.1=py38h7b6447c_1
-  - pyzmq=20.0.0=py38h2531618_1
-  - qt=5.12.9=hda022c4_4
-  - qtconsole=5.0.3=pyhd3eb1b0_0
+  - pysocks=1.7.1=py38h578d9bd_3
+  - pytest=6.1.1=py38_0
+  - python=3.8.5=h7579374_1
+  - python-dateutil=2.8.1=py_0
+  - python-flatbuffers=2.0=pyhd8ed1ab_0
+  - python-graphviz=0.16=pyhd3deb0d_1
+  - python-kaleido=0.2.1=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pytz=2020.1=py_0
+  - pyyaml=5.4.1=py38h27cfd23_1
+  - pyzmq=22.2.1=py38h295c915_1
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=5.1.0=pyhd3eb1b0_0
   - qtpy=1.9.0=py_0
-  - readline=8.1=h27cfd23_0
-  - requests=2.25.1=pyhd3eb1b0_0
-  - retrying=1.3.3=py_2
-  - scikit-learn=0.23.2=py38h0573a6f_0
-  - scipy=1.6.2=py38h7b17777_0
+  - readline=8.0=h7b6447c_0
+  - requests=2.26.0=pyhd8ed1ab_0
+  - scikit-learn=0.24.2=py38h1561384_1
+  - scipy=1.5.2=py38h0b6359f_0
   - seaborn=0.11.0=py_0
-  - semver=2.13.0=pyhd3eb1b0_0
+  - semver=2.10.2=py_0
   - send2trash=1.5.0=pyhd3eb1b0_1
-  - sentry-sdk=1.1.0=pyhd8ed1ab_0
-  - setuptools=52.0.0=py38h06a4308_0
+  - sentry-sdk=1.3.1=pyhd8ed1ab_0
+  - setuptools=50.3.0=py38hb0f4dca_1
   - shortuuid=1.0.1=py38h578d9bd_4
-  - six=1.15.0=py38h06a4308_0
-  - smmap=4.0.0=pyhd3eb1b0_0
-  - sqlite=3.35.4=hdfb4753_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py_0
+  - smmap=3.0.5=pyh44b312d_0
+  - sqlite=3.36.0=hc218d9a_0
   - subprocess32=3.5.4=py_1
-  - sysroot_linux-64=2.12=h77966d4_13
+  - sysroot_linux-64=2.12=he073ed8_14
+  - tbb=2021.3.0=h4bd325d_0
+  - tenacity=6.3.1=py38h06a4308_0
   - terminado=0.9.4=py38h06a4308_0
-  - testpath=0.4.4=pyhd3eb1b0_0
-  - theano=1.0.5=py38h709712a_1
+  - testpath=0.5.0=pyhd3eb1b0_0
   - theano-pymc=1.1.2=py38h709712a_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - threadpoolctl=2.2.0=pyh8a188c0_0
   - tk=8.6.10=hbc83047_0
-  - tornado=6.1=py38h27cfd23_0
+  - toml=0.10.1=py_0
+  - tornado=6.0.4=py38h7b6447c_1
   - traitlets=5.0.5=pyhd3eb1b0_0
-  - typing-extensions=3.7.4.3=hd3eb1b0_0
-  - typing_extensions=3.7.4.3=pyh06a4308_0
-  - urllib3=1.26.4=pyhd3eb1b0_0
-  - wandb=0.10.30=pyhd8ed1ab_0
-  - watchdog=0.10.4=py38h06a4308_0
+  - typing-extensions=3.7.4.3=0
+  - typing_extensions=3.7.4.3=py_0
+  - umap-learn=0.5.1=py38h578d9bd_1
+  - urllib3=1.26.6=pyhd8ed1ab_0
+  - wandb=0.11.2=pyhd8ed1ab_0
+  - watchdog=0.10.4=py38h578d9bd_0
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py38_1
-  - wheel=0.36.2=pyhd3eb1b0_0
+  - wheel=0.35.1=py_0
   - widgetsnbextension=3.5.1=py38_0
-  - xarray=0.18.0=pyhd3eb1b0_1
+  - wrapt=1.12.1=py38h497a2fe_3
+  - xarray=0.16.1=py_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.2=h470a237_5
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxpm=3.5.13=h7f98852_0
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-libxt=1.2.1=h7f98852_2
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h7b6447c_0
   - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
-  - zipp=3.4.1=pyhd3eb1b0_0
+  - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.9=haebb681_0
-prefix: /home/harrigan/miniconda3/envs/damut
+  - zstd=1.5.0=ha95c52a_0
+prefix: /home/harrigan/miniconda3/envs/pymc3
