--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,12 @@ classifiers =
     Development Status :: 1 - Planning
     License :: OSI Approved :: MIT License
     Operating System :: Unix
+include_package_data=True
+package_data={'damuta': ['data/COSMIC_v3.2_SBS_GRCh37.txt']}
+data_files=[('config', ['config/config-defaults/yaml'])]
 
 [options]
-package_dir =
-    = src
+package_dir == src
 packages = find:
 python_requires = >=3.6
 
