rename src folder, doc rebuild

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,9 @@ package_data={'damuta': ['data/COSMIC_v3.2_SBS_GRCh37.txt']}
 data_files=[('config', ['config/config-defaults/yaml'])]
 
 [options]
-package_dir == src
+package_dir == damuta
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = src
+where = damuta
