--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,34 @@
+[bumpversion]
+current_version = 0.0.1
+commit = True
+tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:\.dev(?P<dev>\d+))?
+serialize = 
+	{major}.{minor}.{patch}.dev{dev}
+	{major}.{minor}.{patch}
+
+[bumpversion:file:damuta/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
 [metadata]
 name = damuta
-version = 0.0.1
 author = Cait Harrigan
 author_email = charrigan@cs.toronto.edu
 description = Dirichlet allocation of mutations in cancer genomes
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/morrislab/damuta
-project_urls =
-    Bug Tracker = https://github.com/morrislab/damuta/issues
-classifiers =
-    Programming Language :: Python :: 3
-    Development Status :: 1 - Planning
-    License :: OSI Approved :: MIT License
-    Operating System :: Unix
-include_package_data=True
-package_data={'damuta': ['data/COSMIC_v3.2_SBS_GRCh37.txt']}
-data_files=[('config', ['config/config-defaults/yaml'])]
+project_urls = 
+	Bug Tracker = https://github.com/morrislab/damuta/issues
+classifiers = 
+	Programming Language :: Python :: 3
+	Development Status :: 1 - Planning
+	License :: OSI Approved :: MIT License
+	Operating System :: Unix
 
 [options]
-package_dir == damuta
+package_dir = = damuta
 packages = find:
 python_requires = >=3.6
 
