use bump2version

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,10 @@ serialize =
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
+[bumpversion:file:docs/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
+
 [metadata]
 name = damuta
 author = Cait Harrigan
