some aesthetic changes + setup/conda

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,12 @@ classifiers =
 [options]
 package_dir = = damuta
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
 
 [options.packages.find]
 where = damuta
+
+[options.extras_require]
+dev =
+    pytest
+    pytest-cov
