--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = damuta
-version = 1.0.5
+version = 1.0.6
 author = Cait Harrigan
 author_email = charrigan@cs.toronto.edu
 description = Dirichlet allocation of mutations in cancer genomes
@@ -16,12 +16,11 @@ classifiers =
 	Operating System :: Unix
 
 [options]
-package_dir = = damuta
 packages = find:
 python_requires = >=3.8
 
 [options.packages.find]
-where = damuta
+where = .
 
 [options.extras_require]
 dev =
